Add a few notes.

--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -20,10 +20,10 @@
 \vs p041 2:7 \pc These intelligent creatures of power control and energy direction must adjust their technique on each sphere in accordance with the physical constitution and architecture of that planet. They unfailingly utilize the calculations and deductions of their respective staffs of physicists and other technical advisers regarding the local influence of highly heated suns and other types of supercharged stars. Even the enormous cold and dark giants of space and the swarming clouds of star dust must be reckoned with; all of these material things are concerned in the practical problems of energy manipulation.
 \vs p041 2:8 The power\hyp{}energy supervision of the evolutionary inhabited worlds is the responsibility of the Master Physical Controllers, but these beings are not responsible for all energy misbehaviour on Urantia. There are a number of reasons for such disturbances, some of which are beyond the domain and control of the physical custodians. Urantia is in the lines of tremendous energies, a small planet in the circuit of enormous masses, and the local controllers sometimes employ enormous numbers of their order in an effort to equalize these lines of energy. They do fairly well with regard to the physical circuits of Satania but have trouble insulating against the powerful Norlatiadek currents.
 \usection{3.\bibnobreakspace Our Starry Associates}
-\vs p041 3:1 There are upward of 2,000 brilliant suns pouring forth light and energy in Satania, and your own sun is an average blazing orb. Of the 30 suns nearest yours, only 3 are brighter. The Universe Power Directors initiate the specialized currents of energy which play between the individual stars and their respective systems. These solar furnaces, together with the dark giants of space, serve the power centres and physical controllers as way stations for the effective concentrating and directionizing of the energy circuits of the material creations.
+\vs p041 3:1 There are upward of 2,000 brilliant suns\fnst{\textbf{2,000 brilliant suns}, A sphere centred on Urantia with the radius of 65\,ly contains about 2,000 stars. Therefore, assuming that the star density in other parts of Satania is at least as great as in the vicinity of our Sun, we can deduce that the size of Satania cannot be greater than 65\,ly.} pouring forth light and energy in Satania, and your own sun is an average blazing orb. Of the 30 suns nearest yours, only 3 are brighter\fnst{\textbf{only 3 are brighter}, The 30 nearest stars lie in a sphere of radius 12.6\,ly and the three stars brighter than ours are: $\alpha$ Centauri (4.35\,ly), Sirius (8.57\,ly) and Procyon (11.4\,ly).}. The Universe Power Directors initiate the specialized currents of energy which play between the individual stars and their respective systems. These solar furnaces, together with the dark giants of space, serve the power centres and physical controllers as way stations for the effective concentrating and directionizing of the energy circuits of the material creations.
 \vs p041 3:2 The suns of Nebadon are not unlike those of other universes. The material composition of all suns, dark islands, planets, and satellites, even meteors, is quite identical. These suns have an average diameter of about $1.6\times 10^6$\,km, that of your own solar orb being slightly less\fnst{\textbf{slightly less}, Our own ``solar orb'' has an average diameter of $1.392684 \times 10^6$\,km.}. The largest star in the universe, the stellar cloud Antares, is 450 times the diameter of your sun\fnst{\textbf{Antares, is 450 times the diameter of your sun}, According to the present astronomical data for Antares, its diameter (measured by parallax and observed angular diameter) is 800 times that of our sun.} and is 60,000,000 times its volume\fnst{\textbf{60,000,000 times its volume}, There is an apparent contradiction here, as long as the shape of Antares is assumed to be spherical and its volume calculated according to the formula of Euclidean geometry: ${V_{Antares}/V_{\odot}} = {R^3_{Antares}/R^3_{\odot}} = 450^3 = 91,125,000 \neq 60,000,000$. Antares, being a Class M supergiant with the mass of $15.5 M_{\odot}$, has a density far too low to account for the contribution from the space curvature according to the General Relativity, thus implying a non-spherical (ellipsoid) shape.}. But there is abundant space to accommodate all of these enormous suns. They have just as much comparative elbow room in space as one dozen oranges would have if they were circulating about throughout the interior of Urantia, and were the planet a hollow globe.
 \vs p041 3:3 \pc When suns that are too large are thrown off a nebular mother wheel, they soon break up or form double stars. All suns are originally truly gaseous, though they may later transiently exist in a semiliquid state. When your sun attained this quasi\hyp{}liquid state of supergas pressure, it was not sufficiently large to split equatorially, this being one type of double star formation.
-\vs p041 3:4 When less than 0.1 the size of your sun, these fiery spheres rapidly contract, condense, and cool. When upwards of 30 times its size --- rather 30 times the gross content of actual material --- suns readily split into two separate bodies, either becoming the centres of new systems or else remaining in each other’s gravity grasp and revolving about a common centre as one type of double star.
+\vs p041 3:4 When less than \bibfrac{1}{10}\ts{th} the size of your sun, these fiery spheres rapidly contract, condense, and cool. When upwards of 30 times its size --- rather 30 times the gross content of actual material --- suns readily split into two separate bodies, either becoming the centres of new systems or else remaining in each other’s gravity grasp and revolving about a common centre as one type of double star.
 \vs p041 3:5 \pc The most recent of the major cosmic eruptions in Orvonton was the extraordinary double star explosion, the light of which reached Urantia in A.D.\,1572. This conflagration was so intense that the explosion was clearly visible in broad daylight.
 \vs p041 3:6 \pc Not all stars are solid, but many of the older ones are. Some of the reddish, faintly glimmering stars have acquired a density at the centre of their enormous masses which would be expressed by saying that 1 cm\ts{3} of such a star, if on Urantia, would weigh 166\,kg. The enormous pressure, accompanied by loss of heat and circulating energy, has resulted in bringing the orbits of the basic material units closer and closer together until they now closely approach the status of electronic condensation. This process of cooling and contraction may continue to the limiting and critical explosion point of ultimatonic condensation.
 \vs p041 3:7 Most of the giant suns are relatively young; most of the dwarf stars are old, but not all. The collisional dwarfs may be very young and may glow with an intense white light, never having known an initial red stage of youthful shining. Both very young and very old suns usually shine with a reddish glow. The yellow tinge indicates moderate youth or approaching old age, but the brilliant white light signifies robust and extended adult life.
