Add some notes and enhance the converter to handle new features

--- a/tex/p042.tex
+++ b/tex/p042.tex
@@ -105,9 +105,9 @@
 \usection{8.\bibnobreakspace Atomic Cohesion}
 \vs p042 8:1 While gravity is one of several factors concerned in holding together a tiny atomic energy system, there is also present in and among these basic physical units a powerful and unknown energy, the secret of their basic constitution and ultimate behaviour, a force which remains to be discovered on Urantia. This universal influence permeates all the space embraced within this tiny energy organization.
 \vs p042 8:2 The interelectronic space of an atom is not empty. Throughout an atom this interelectronic space is activated by wavelike manifestations which are perfectly synchronized with electronic velocity and ultimatonic revolutions. This force is not wholly dominated by your recognized laws of positive and negative attraction; its behaviour is therefore sometimes unpredictable. This unnamed influence seems to be a space\hyp{}force reaction of the Unqualified Absolute.
-\vs p042 8:3 \pc The charged protons and the uncharged neutrons of the nucleus of the atom are held together by the reciprocating function of the mesotron\fnst{mesotron --- nowadays called \bibemph{meson}. In particular, the $\pi^+$-meson (pion) here referred to is now (2012\,A.D.) considered to be 273 times as heavy as the electron.}, a particle of matter 180 times as heavy as the electron. Without this arrangement the electric charge carried by the protons would be disruptive of the atomic nucleus.
+\vs p042 8:3 \pc The charged protons and the uncharged neutrons of the nucleus of the atom are held together by the reciprocating function of the mesotron\fnst{mesotron --- nowadays called \bibemph{meson}. In particular, the $\pi^+$-meson (pion) here referred to is now considered to be 273 times as heavy as the electron, but at the time (1934) when Swann penned the text quoted here it was assumed to be 180 times as heavy as the electron.}, a particle of matter 180 times as heavy as the electron. Without this arrangement the electric charge carried by the protons would be disruptive of the atomic nucleus.
 \vs p042 8:4 As atoms are constituted, neither electric nor gravitational forces could hold the nucleus together. The integrity of the nucleus is maintained by the reciprocal cohering function of the mesotron, which is able to hold charged and uncharged particles together because of superior force\hyp{}mass power and by the further function of causing protons and neutrons constantly to change places. The mesotron causes the electric charge of the nuclear particles to be incessantly tossed back and forth between protons and neutrons. At one infinitesimal part of a second a given nuclear particle is a charged proton and the next an uncharged neutron. And these alternations of energy status are so unbelievably rapid that the electric charge is deprived of all opportunity to function as a disruptive influence. Thus does the mesotron function as an “energy\hyp{}carrier” particle which mightily contributes to the nuclear stability of the atom\fnst{The mechanism of $\pi^+$ pion exchange described here was first suggested by Hideki Yukawa in 1935 and experimentally confirmed in 1947. Having \bibemph{finite mass} for the virtual quantum of strong field ideally corresponded to the fact that this interaction has a \bibemph{short} range, unlike the electromagnetic interaction explained by the \bibemph{massless} virtual photons. However, in 1964 it was superseded by the quark model, according to which the proton-neutron force is a kind of ``residual'' force caused by the gluon exchange between the quark constituents of nucleons. In the quark model, pions are thought to consist of quark-antiquark pairs (e.g. $\pi^+ = u\overline{d}$), just like all other mesons and so their \bibemph{special} role as the field quanta disappears.}.
-\vs p042 8:5 The presence and function of the mesotron also explains another atomic riddle. When atoms perform radioactively, they emit far more energy than would be expected. This excess of radiation is derived from the breaking up of the mesotron “energy carrier,” which thereby becomes a mere electron. The mesotronic disintegration is also accompanied by the emission of certain small uncharged particles.
+\vs p042 8:5 The presence and function of the mesotron also explains another atomic riddle. When atoms perform radioactively, they emit far more energy than would be expected. This excess of radiation is derived from the breaking up of the mesotron “energy carrier,” which thereby becomes a mere electron. The mesotronic disintegration is also accompanied by the emission of certain small uncharged particles\fnst{\textbf{small uncharged particles}, These are probably neutrino and the actual decay reaction is: $\pi^+ \rightarrow e^+ + \nu_e$.}.
 \vs p042 8:6 The mesotron explains certain cohesive properties of the atomic nucleus, but it does not account for the cohesion of proton to proton nor for the adhesion of neutron to neutron. The paradoxical and powerful force of atomic cohesive integrity is a form of energy as yet undiscovered on Urantia.
 \vs p042 8:7 These mesotrons are found abundantly in the space rays which so incessantly impinge upon your planet.
 \usection{9.\bibnobreakspace Natural Philosophy}
