Mention the human sources.

--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -1,6 +1,6 @@
 \upaper{41}{Physical Aspects of the Local Universe}
-\author{Archangel}
-\vs p041 0:1 The characteristic\fnst{\textbf{PAPER 41}, Most of the information in this and the following paper is based on the book by Sir Arthur Stanley Eddington ``Stars and Atoms'' published in 1927.} space phenomenon which sets off each local creation from all others is the presence of the Creative Spirit. All Nebadon is certainly pervaded by the space presence of the Divine Minister of Salvington, and such presence just as certainly terminates at the outer borders of our local universe. That which is pervaded by our local universe Mother Spirit \bibemph{is} Nebadon; that which extends beyond her space presence is outside Nebadon, being the extra\hyp{}Nebadon space regions of the superuniverse of Orvonton --- other local universes.
+\author{Archangel\ts{*}}\footnotetext{\textbf{Archangel}, Human source: A.S.~Eddington ``Stars and Atoms'' (1927).}
+\vs p041 0:1 The characteristic space phenomenon which sets off each local creation from all others is the presence of the Creative Spirit. All Nebadon is certainly pervaded by the space presence of the Divine Minister of Salvington, and such presence just as certainly terminates at the outer borders of our local universe. That which is pervaded by our local universe Mother Spirit \bibemph{is} Nebadon; that which extends beyond her space presence is outside Nebadon, being the extra\hyp{}Nebadon space regions of the superuniverse of Orvonton --- other local universes.
 \vs p041 0:2 \pc While the administrative organization of the grand universe discloses a clear\hyp{}cut division between the governments of the central, super-, and local universes, and while these divisions are astronomically paralleled in the space separation of Havona and the 7 superuniverses, no such clear lines of physical demarcation set off the local creations. Even the major and minor sectors of Orvonton are (to us) clearly distinguishable, but it is not so easy to identify the physical boundaries of the local universes. This is because these local creations are administratively organized in accordance with certain \bibemph{creative} principles governing the segmentation of the total energy charge of a superuniverse, whereas their physical components, the spheres of space --- suns, dark islands, planets, etc. --- take origin primarily from nebulae, and these make their astronomical appearance in accordance with certain \bibemph{precreative} (transcendental) plans of the Architects of the Master Universe.
 \vs p041 0:3 One or more --- even many --- such nebulae may be encompassed within the domain of a single local universe even as Nebadon was physically assembled out of the stellar and planetary progeny of Andronover and other nebulae. The spheres of Nebadon are of diverse nebular ancestry, but they all had a certain minimum commonness of space motion which was so adjusted by the intelligent efforts of the power directors as to produce our present aggregation of space bodies, which travel along together as a contiguous unit over the orbits of the superuniverse.
 \vs p041 0:4 Such is the constitution of the local star cloud of Nebadon, which today swings in an increasingly settled orbit about the Sagittarius centre of that minor sector of Orvonton to which our local creation belongs.
