--- a/tex/p042.tex
+++ b/tex/p042.tex
@@ -1,5 +1,5 @@
 \upaper{42}{Energy --- Mind and Matter}
-\author{Mighty Messenger}
+\author{Mighty Messenger\ts{*}}\footnotetext{\textbf{Archangel}, Human sources: A.S.~Eddington ``Stars and Atoms'', J.~Jeans ``The Universe Around Us'' (1930) and ``Through Space and Time'' (1934), W.F.G.~Swann ``The Architecture of the Universe'' (1934).}
 \vs p042 0:1 The foundation of the universe is material in the sense that energy is the basis of all existence, and pure energy is controlled by the Universal Father. Force, energy, is the one thing which stands as an everlasting monument demonstrating and proving the existence and presence of the Universal Absolute. This vast stream of energy proceeding from the Paradise Presences has never lapsed, never failed; there has never been a break in the infinite upholding.
 \vs p042 0:2 The manipulation of universe energy is ever in accordance with the personal will and the all\hyp{}wise mandates of the Universal Father. This personal control of manifested power and circulating energy is modified by the co\hyp{}ordinate acts and decisions of the Eternal Son, as well as by the united purposes of the Son and the Father executed by the Conjoint Actor. These divine beings act personally and as individuals; they also function in the persons and powers of an almost unlimited number of subordinates, each variously expressive of the eternal and divine purpose in the universe of universes. But these functional and provisional modifications or transmutations of divine power in no way lessen the truth of the statement that all force\hyp{}energy is under the ultimate control of a personal God resident at the centre of all things.
 \usection{1.\bibnobreakspace Paradise Forces and Energies}
