Adjust parameters for Kobo Mini

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -855,6 +855,7 @@
 \newcommand{\txtw}{0.81\linewidth}
 
 \tunemarkup{pgkobomini}{%
+\setcounter{DefaultLines}{2}
 \renewcommand{\authorfont}{\fontsize{12}{9}\bfseries\itshape}%
 \newcommand{\bibtocsuperheadfont}{\fontsize{13}{13}\selectfont}
 \newcommand{\bibheadpapersize}{\fontsize{8}{8}\selectfont}
@@ -874,12 +875,12 @@
 \newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge ahb}}
 \newcommand{\subfont}{\fontsize{16}{18}\itshape}
 \newcommand{\parttitlefontsize}{\LARGE}
-\renewcommand{\bibbookend}{\fontsize{19.5}{22}\selectfont}
-\renewcommand{\urantiamainfontsize}{19.5/22}
+\renewcommand{\bibbookend}{\fontsize{18}{20}\selectfont}
+\renewcommand{\urantiamainfontsize}{18/20}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{13}{15}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{10.5}{17}\selectfont}
 \newcommand{\bibsectitlefont}{\fontsize{9}{10}\selectfont}
-\renewcommand{\footnotesize}{\fontsize{15}{17}\selectfont}
+\renewcommand{\footnotesize}{\fontsize{13}{15}\selectfont}
 \setlength{\minitocafterskip}{-1.2ex}
 }
 
