Tidy up numerics

--- a/tex/p043.tex
+++ b/tex/p043.tex
@@ -90,7 +90,7 @@
 \vs p043 8:9 \ublistelem{5.}\bibnobreakspace While attaining satisfactory socialization of the personality on intellectual and vocational levels, further perfect the ability to live in intimate contact with similar and slightly dissimilar beings with ever\hyp{}lessening irritability and ever\hyp{}diminishing resentment. The reversion directors contribute much to this latter attainment through their group\hyp{}play activities.
 \vs p043 8:10 \ublistelem{6.}\bibnobreakspace Adjust all of these various socialization techniques to the furtherance of the progressive co\hyp{}ordination of the Paradise\hyp{}ascension career; augment universe insight by enhancing the ability to grasp the eternal goal\hyp{}meanings concealed within these seemingly insignificant time\hyp{}space activities.
 \vs p043 8:11 \ublistelem{7.}\bibnobreakspace And then, climax all of these procedures of multisocialization with the concurrent enhancement of spiritual insight as it pertains to the augmentation of all phases of personal endowment through group spiritual association and morontia co\hyp{}ordination. Intellectually, socially, and spiritually two moral creatures do not merely double their personal potentials of universe achievement by partnership technique; they more nearly quadruple their attainment and accomplishment possibilities.
-\vs p043 8:12 \pc We have portrayed Edentia socialization as an association of a morontia mortal with a univitatia family group consisting of 10 intellectually dissimilar individuals concomitant with a similar association with 10 fellow morontians. But on the first seven major worlds only one ascending mortal lives with 10 univitatia. On the second group of seven major worlds two mortals abide with each native group of ten, and so on up until, on the last group of seven major spheres, 10 morontia beings are domiciled with 10 univitatia. As you learn how better to socialize with the univitatia, you will practise such improved ethics in your relations with your fellow morontia progressors.
+\vs p043 8:12 \pc We have portrayed Edentia socialization as an association of a morontia mortal with a univitatia family group consisting of 10 intellectually dissimilar individuals concomitant with a similar association with 10 fellow morontians. But on the first seven major worlds only 1 ascending mortal lives with 10 univitatia. On the second group of seven major worlds 2 mortals abide with each native group of 10, and so on up until, on the last group of seven major spheres, 10 morontia beings are domiciled with 10 univitatia. As you learn how better to socialize with the univitatia, you will practise such improved ethics in your relations with your fellow morontia progressors.
 \vs p043 8:13 As ascending mortals you will enjoy your sojourn on the progress worlds of Edentia, but you will not experience that personal thrill of satisfaction which characterizes your initial contact with universe affairs on the system headquarters or your farewell touch with these realities on the final worlds of the universe capital.
 \usection{9.\bibnobreakspace Citizenship on Edentia}
 \vs p043 9:1 After graduation from world number 70, ascending mortals take up residence on Edentia. Ascenders now, for the first time, attend the “assemblies of Paradise” and hear the story of their far\hyp{}flung career as it is depicted by the Faithful of Days, the first of the Supreme Trinity\hyp{}origin Personalities they have met.
