Show the authors of papers in the TOC

--- a/tex/paper-titles.tex
+++ b/tex/paper-titles.tex
@@ -30,6 +30,7 @@
 \upapertitle{16}{The Seven Master Spirits}{Universal Censor}{p16}
 \upapertitle{17}{The Seven Supreme Spirit Groups}{Divine Counsellor}{p17}
 \upapertitle{18}{The Supreme Trinity Personalities}{Divine Counsellor}{p18}
+\tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{19}{The Co-ordinate Trinity-Origin Beings}{Divine Counsellor}{p19}
 \upapertitle{20}{The Paradise Sons of God}{Perfector of Wisdom}{p20}
 \upapertitle{21}{The Paradise Creator Sons}{Perfector of Wisdom}{p21}
@@ -52,6 +53,7 @@
 \upapertitle{34}{The Local Universe Mother Spirit}{Mighty Messenger}{p34}
 \upapertitle{35}{The Local Universe Sons of God}{Chief of Archangels}{p35}
 \upapertitle{36}{The Life Carriers}{Vorondadek Son}{p36}
+\tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{37}{Personalities of the Local Universe}{Brilliant Evening Star}{p37}
 \upapertitle{38}{Ministering Spirits of the Local Universe}{Melchizedek}{p38}
 \upapertitle{39}{The Seraphic Hosts}{Melchizedek}{p39}
@@ -68,12 +70,13 @@
 \upapertitle{50}{The Planetary Princes}{Secondary Lanonandek}{p50}
 \upapertitle{51}{The Planetary Adams}{Secondary Lanonandek}{p51}
 \upapertitle{52}{Planetary Mortal Epochs}{Mighty Messenger}{p52}
-\upapertitle{53}{The Lucifer Rebellion}{\parbox[t]{0.3\linewidth}{Manovandet Melchizedek}}{p53}
+\upapertitle{53}{The Lucifer Rebellion}{Manovandet Melchizedek}{p53}
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{54}{Problems of the Lucifer Rebellion}{Mighty Messenger}{p54}
 \upapertitle{55}{The Spheres of Light and Life}{Mighty Messenger}{p55}
 \upapertitle{56}{Universal Unity}{\parbox[t]{0.3\linewidth}{Mighty Messenger and Machiventa Melchizedek}}{p56}
 \upartheader{3}
+\tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{57}{The Origin of Urantia}{Life Carrier}{p57}
 \upapertitle{58}{Life Establishment on Urantia}{Life Carrier}{p58}
 \upapertitle{59}{The Marine-Life Era on Urantia}{Life Carrier}{p59}
@@ -96,6 +99,7 @@
 \upapertitle{74}{Adam and Eve}{Solonia}{p74}
 \upapertitle{75}{The Default of Adam and Eve}{Solonia}{p75}
 \upapertitle{76}{The Second Garden}{Solonia}{p76}
+\tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{77}{The Midway Creatures}{Archangel}{p77}
 \upapertitle{78}{The Violet Race after the Days of Adam}{Archangel}{p78}
 \upapertitle{79}{Andite Expansion in the Orient}{Archangel}{p79}
@@ -122,6 +126,7 @@
 \ifmultivol\tunemarkup{pgafour}{\upartheadercont{3}\upapertitleheader{Paper}{Author}{Page}}\fi
 \ifmultivol\tunemarkup{pgcrownq}{\upapertitleheader{Paper}{Author}{Page}}\fi
 \upapertitle{97}{Evolution of the God Concept among the Hebrews}{Melchizedek}{p97}
+\tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{98}{The Melchizedek Teachings in the Occident}{Melchizedek}{p98}
 \upapertitle{99}{The Social Problems of Religion}{Melchizedek}{p99}
 \upapertitle{100}{Religion in Human Experience}{Melchizedek}{p100}
@@ -144,6 +149,7 @@
 \upapertitle{116}{The Almighty Supreme}{Mighty Messenger}{p116}
 \upapertitle{117}{God the Supreme}{Mighty Messenger}{p117}
 \upapertitle{118}{Supreme and Ultimate — Time and Space}{Mighty Messenger}{p118}
+\tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{119}{The Bestowals of Christ Michael}{Chief of Evening Stars}{p119}
 \upartheader{4}
 \upapertitle{120}{The Bestowal of Michael on Urantia}{Mantutia Melchizedek}{p120}
@@ -167,6 +173,7 @@
 \upapertitle{136}{Baptism and the Forty Days}{Midwayer Commission}{p136}
 \upapertitle{137}{Tarrying Time in Galilee}{Midwayer Commission}{p137}
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
+\tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{138}{Training the Kingdom’s Messengers}{Midwayer Commission}{p138}
 \upapertitle{139}{The Twelve Apostles}{Midwayer Commission}{p139}
 \upapertitle{140}{The Ordination of the Twelve}{Midwayer Commission}{p140}
@@ -188,6 +195,7 @@
 \upapertitle{156}{The Sojourn at Tyre and Sidon}{Midwayer Commission}{p156}
 \upapertitle{157}{At Caesarea-Philippi}{Midwayer Commission}{p157}
 \upapertitle{158}{The Mount of Transfiguration}{Midwayer Commission}{p158}
+\tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{159}{The Decapolis Tour}{Midwayer Commission}{p159}
 \upapertitle{160}{Rodan of Alexandria}{Midwayer Commission}{p160}
 \upapertitle{161}{Further Discussions with Rodan}{Midwayer Commission}{p161}
@@ -212,6 +220,7 @@
 \upapertitle{177}{Wednesday, the Rest Day}{Midwayer Commission}{p177}
 \upapertitle{178}{Last Day at the Camp}{Midwayer Commission}{p178}
 \upapertitle{179}{The Last Supper}{Midwayer Commission}{p179}
+\tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{180}{The Farewell Discourse}{Midwayer Commission}{p180}
 \upapertitle{181}{Final Admonitions and Warnings}{Midwayer Commission}{p181}
 \upapertitle{182}{In Gethsemane}{Midwayer Commission}{p182}
