Adjust Introduction's font size for the 7" build

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -8,7 +8,7 @@
 \makeatother
 
 \begin{center}
-\LARGE\tunemarkup{pgafour}{\huge}\bfseries
+\Large\tunemarkup{pgafour}{\huge}\bfseries
 INTRODUCTION
 \end{center}
 
@@ -17,7 +17,7 @@ INTRODUCTION
 \tunemarkup{pgkindledx}{\fontsize{17}{21}\selectfont}
 \tunemarkup{pgafour}{\fontsize{17}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{16}{18}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{16}{19}\selectfont}
+\tunemarkup{pgkoboaurahd}{\fontsize{14.5}{16.7}\selectfont}
 \tunemarkup{pgcrownq}{\fontsize{14}{17}\selectfont}
 
 \bibemph{The British Study Edition of The Urantia Papers} has the following main features:
