--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -7,7 +7,7 @@
 \pagenumbering{arabic}
 \pagestyle{empty}
 \include{tex/title}
-\newpage
+\newpage\pagestyle{fancy}
 \tunemarkup{pghanlin}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgnexus7}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgkoboaurahd}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\include{tex/paper-titles}}
@@ -17,7 +17,7 @@
 \tunemarkup{pgcrownq}{\include{tex/paper-titles}}
 %\iftotalfigures\clp\listoffigures\clp\fi XXX doesn't work: disturbs all the headings for unknown reason!
 \tunemarkup{introinclude}{\include{tex/intro}}
-\clp\pagestyle{fancy}
+\clp
 \ifvoli
 \include{tex/p000}
 \include{tex/p001}\tunemarkup{pgcrownq}{\newpage}
