--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -3375,7 +3375,7 @@
 \qstart{Why was Moses not permitted to ``go to the other side'' (i.e. be resurrected on the mansion world)?}
 {because the fallen Planetary Prince Caligastia was contesting such a deliverance}{1}
 {because he was a secret sinner}{0}
-{because the resurrection hall on Mansonia One was not yet cinstructed}{0}
+{because the resurrection hall on Mansonia One was not yet constructed}{0}
 \qstop
 
 \qstart{Since what event do the Urantia mortals may proceed directly to the morontia spheres after death?}
