--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -82,6 +82,9 @@
 \voliiitrue
 \multivolfalse
 
+\RequirePackage{amsmath,amsfonts,amssymb}
+\renewcommand{\vec}[1]{\boldsymbol{#1}}
+
 \tunemarkup{garamond}{%
 \def\urantiamainfont{Garamond Premier Pro}
 %\def\urantiaparttitlefont{Garamond Premier Pro Semibold Display}
